--- a/ex01/src/main/webapp/css/style.css
+++ b/ex01/src/main/webapp/css/style.css
@@ -9,3 +9,11 @@ h1 {
 	text-align:center;
 	margin:30px 0px;
 }
+
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
